--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "remask": "0.1.0-alpha.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
